--- a/pages/css/rockey_burgers_header.css
+++ b/pages/css/rockey_burgers_header.css
@@ -21,11 +21,12 @@
 }
 .navbox{
     height: 100%;
+
 }
 .btn {
     border: none;
     outline: none;
-    padding: 10px 0 16px 0;
+    padding: 0;
     height: 100%;
     background-color: #f1f1f1;
     cursor: pointer;
