--- a/pages/css/rockey_burgers_header.css
+++ b/pages/css/rockey_burgers_header.css
@@ -1,33 +1,42 @@
 .header{
     background-color: #ffffff;
     position: fixed;
+    margin-bottom: 15px;
     top: 0;
     left: 0;
     right: 0;
     height: 80px;
     box-shadow: 0 0 25px 0 black;
     overflow: hidden;
+    display: inline-flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 .header img{
     height: 80px;
     margin-left: 15px;
 }
 #myDIV{
-    display: flex;
     list-style-type: none;
     margin-left: 10px;
     padding: 0;
     height: 100%;
+    display: flex;
+    flex-grow: 2;
 }
 .navbox{
-    height: 100%;
-
+    display: flex;
+    list-style-type: none;
+    margin-left: 10px;
+    padding: 0;
+    margin-right: 15px;
 }
 .btn {
     border: none;
     outline: none;
     padding: 0;
-    height: 100%;
+    height: 40px;
+    width: 50px;
     background-color: #f1f1f1;
     cursor: pointer;
 }
