--- a/pages/css/rockey_burgers_index.css
+++ b/pages/css/rockey_burgers_index.css
@@ -3,3 +3,21 @@ body{
     background-size: cover;
     margin-top: 80px;
 }
+.main{
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    margin-top: 15px;
+    flex-wrap: wrap;
+}
+.left{
+    background-color: #ffffff;
+    margin-top: 15px;
+}
+.video{
+    margin-top: 10px;
+    margin-right: 10px;
+}
+.testimonials{
+    background-color: #ffffff;
+}
