--- a/pages/css/rockey_burgers_index.css
+++ b/pages/css/rockey_burgers_index.css
@@ -1,23 +1,40 @@
-body{
-    background-image: url(../../images/background.jpg);
-    background-size: cover;
-    margin-top: 80px;
-}
 .main{
     display: flex;
-    height: 100%;
     justify-content: space-between;
+    height: 100%;
     margin-top: 15px;
     flex-wrap: wrap;
 }
 .left{
     background-color: #ffffff;
-    margin-top: 15px;
+    width: 60%;
+    flex-direction: column;
+    margin: 15px auto 15px auto;
+    padding: 0 5px 0 5px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 15px 3px black;
+}
+.right{
+    margin: 15px auto 0 auto;
+    width: 30%;
 }
 .video{
     margin-top: 10px;
     margin-right: 10px;
+    margin-bottom: 15px;
+    width: 100%;
 }
 .testimonials{
     background-color: #ffffff;
+    padding: 1px 0 5px 5px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 15px 3px black;
+}
+.testimonials h3{
+    margin-bottom: 6px;
+    margin-top: 5px;
+}
+.testimonials h4{
+    margin-top: 6px;
+    margin-bottom: 10px;
 }
