--- a/pages/css/rockey_burgers_header.css
+++ b/pages/css/rockey_burgers_header.css
@@ -1,18 +1,19 @@
 html{
     font-family: 'Merriweather', serif;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 .header{
     background-color: #ffffff;
     position: fixed;
-    margin-bottom: 15px;
     top: 0;
     left: 0;
     right: 0;
     height: 80px;
     box-shadow: 0 0 25px 0 black;
-    overflow: hidden;
     display: inline-flex;
-    justify-content: flex-end;
     align-items: flex-end;
 }
 .header img{
@@ -52,12 +53,6 @@ html{
     font-family: sans-serif;
     font-weight: bold;
 }
-body{
-    background-image: url(../../images/background.jpg);
-    background-size: cover;
-    margin: 80px 0 15px 0;
-
-}
 footer{
     background-color: #ffffff;
     padding-left: 15px;
@@ -65,10 +60,17 @@ footer{
     bottom: 0;
 
 }
-footer img{
-    width: 20px;
-
+#instagram{
+    color: #ffffff;
+    background: #f09433;
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
 }
-footer i{
-    color: blue;
+#facebook{
+    color: #3A5A98;
+}
+#twitter{
+    color: #38A2F2;
 }
