--- a/pages/css/rockey_burgers_index.css
+++ b/pages/css/rockey_burgers_index.css
@@ -1,3 +1,15 @@
+body {
+    background-image: url(../../images/background.jpg);
+    background-size: cover;
+    margin: auto auto;
+}
+.burgerimg{
+    background-image: url("../../images/burger-hero.jpg");
+    height: 100%;
+    background-size: cover;
+    margin-top: 80px;
+    padding: auto auto;
+}
 .main{
     display: flex;
     justify-content: space-between;
