--- a/pages/css/rockey_burgers_menu.css
+++ b/pages/css/rockey_burgers_menu.css
@@ -1,5 +1,14 @@
 body{
     background-image: url(../../images/background.jpg);
     background-size: cover;
-    margin-top: 80px;
+    margin: 80px 0 0 0;
+    font-size: 25px;
+}
+.menu{
+    display: flex;
+    justify-content: center;
+    background-color: #ffffff;
+    border-radius: 10px;
+    width: 500px;
+
 }
