--- a/pages/css/rockey_burgers_index.css
+++ b/pages/css/rockey_burgers_index.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(../../images/background.jpg);
     background-size: cover;
-    margin: auto auto;
+    margin: 0;
 }
 .burgerimg{
     margin-top: 80px;
@@ -12,30 +12,62 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    z-index: -100;
 
 }
 .main{
     display: flex;
     margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: space-evenly;
+    height: auto;
 }
 .left{
     background-color: #ffffff;
+    width: 65%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 4px 5px 9px 3px rgba(0,0,0,0.58);
+}
+.aboutus{
+    padding: 5px 10px;
+}
+.reasons{
+    padding: 5px 10px;
 }
 .right{
+    width: 30%;
+    height: 100%;
+    border-radius: 10px;
 }
 .video{
-
-
+    height: 100%;
+    width: 100%;
 }
-video{
-
+iframe{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 .testimonials{
-    background-color: pink;
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 1px 10px;
+    box-shadow: 4px 5px 9px 3px rgba(0,0,0,0.58);
 }
-.testimonials h3{
-
+.testimonials h2{
+    margin: 10px 0;
 }
 .testimonials h4{
-
+    margin: 10px 0;
 }
+.mainList{
+    list-style-type: none;
+    padding-left: 20px;
+}
+.mainList li{
+    margin: 15px;
+}
+
+
