--- a/pages/css/rockey_burgers_index.css
+++ b/pages/css/rockey_burgers_index.css
@@ -3,18 +3,6 @@ body {
     background-size: cover;
     margin: 0;
 }
-.burgerimg{
-    margin-top: 80px;
-    background-image: url("../../images/burger-hero.jpg");
-    background-color: red;
-    height:350px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-    z-index: -100;
-
-}
 .main{
     display: flex;
     margin-top: 10px;
@@ -64,10 +52,10 @@ iframe{
 }
 .mainList{
     list-style-type: none;
-    padding-left: 20px;
+    padding-left: 0;
 }
 .mainList li{
-    margin: 15px;
+    margin: 15px 0;
 }
 
 
