--- a/pages/css/rockey_burgers_header&footer.css
+++ b/pages/css/rockey_burgers_header&footer.css
@@ -6,8 +6,9 @@ html{
     margin: 0;
 }
 .header{
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,0.9738270308123249) 85%, rgba(2,0,36,0.8869922969187675) 100%);    position: fixed;
+    background-color: #fefdf8;
+    z-index: 100;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -70,19 +71,11 @@ button{
 
 }
 footer{
-    background-color: #ffffff;
+    background-color: #fefdf8;
     padding-left: 15px;
     position: sticky;
     bottom: 0;
 
-}
-#instagram{
-    color: #ffffff;
-    background: #f09433;
-    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
-    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
 }
 #facebook{
     color: #3A5A98;
