--- a/pages/css/rockey_burgers_index.css
+++ b/pages/css/rockey_burgers_index.css
@@ -11,7 +11,7 @@ body {
     height: auto;
 }
 .left{
-    background-color: #ffffff;
+    background-color: #fefdf8;
     width: 65%;
     border-radius: 10px;
     display: flex;
@@ -48,7 +48,7 @@ iframe{
     border-radius: 10px;
 }
 .testimonials{
-    background-color: #ffffff;
+    background-color: #fefdf8;
     border-radius: 10px;
     padding: 1px 10px;
     box-shadow: 4px 5px 9px 3px rgba(0,0,0,0.58);
