--- a/pages/css/rockey_burgers_menu.css
+++ b/pages/css/rockey_burgers_menu.css
@@ -4,16 +4,42 @@ body{
     margin: 0;
     padding: 0;
     font-size: 25px;
-}
+}.container{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+    margin-bottom: 10px;
+ }
+ .left{
+     width: 65%;
+ }
+ .right{
+     width: 30%;
+     background-color: #fefdf8;
+     border-radius: 10px;
+     box-shadow: 6px 6px 20px 0 rgba(0,0,0,0.75);
+ }
 .menu{
     font-size: 60px;
-    margin: 15px 0 5px 30px;
-    background-color: #f1f1f1;
+    margin: 0 0 5px 30px;
+    background-color: #fefdf8;
     display: flex;
+    flex-direction: column;
     width: fit-content;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 6px 6px 20px 0 rgba(0,0,0,0.75);
+}
+.subtitle{
+    font-size: 20px;
+}
+.burgsand{
+    position: relative;
+    top: 250px;
+    left: 100px;
+    font-size: 50px;
+    font-weight: bold;
 }
 .title{
     position: relative;
@@ -50,4 +76,29 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.parallax4{
+    box-shadow: 0 -5px 20px 0 rgba(0,0,0,0.75);
+    background-image: url("../../images/brenda-godinez-AAHdL8gp5b8-unsplash.jpg");
+    min-height: 350px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.burgers, .sides, .drinks{
+    background-color: #fefdf8;
+    margin: 10px 0 30px 0;
+    padding: 10px;
+}
+.burgers li, .sides li, .drinks li{
+    padding: 10px;
+}
+.desserts{
+    margin-top: 10px;
+    background-color: #fefdf8;
+    padding: 10px;
+}
+.desserts ul{
+    margin: 10px;
 }
