--- a/pages/css/rockey_burgers_menu.css
+++ b/pages/css/rockey_burgers_menu.css
@@ -14,15 +14,9 @@ body{
  .left{
      width: 65%;
  }
- .right{
-     width: 30%;
-     background-color: #fefdf8;
-     border-radius: 10px;
-     box-shadow: 6px 6px 20px 0 rgba(0,0,0,0.75);
- }
 .menu{
     font-size: 60px;
-    margin: 0 0 5px 30px;
+    margin-bottom: 5px;
     background-color: #fefdf8;
     display: flex;
     flex-direction: column;
@@ -90,6 +84,9 @@ body{
     background-color: #fefdf8;
     margin: 10px 0 30px 0;
     padding: 10px;
+    box-shadow: 0 -5px 20px 0 rgba(0,0,0,0.75);
+    border-radius: 10px;
+
 }
 .burgers li, .sides li, .drinks li{
     padding: 10px;
@@ -98,7 +95,38 @@ body{
     margin-top: 10px;
     background-color: #fefdf8;
     padding: 10px;
+    box-shadow: 0 -5px 20px 0 rgba(0,0,0,0.75);
+    border-radius: 10px;
+
 }
 .desserts ul{
     margin: 10px;
+}
+.right{
+    width: 30%;
+    background-color: #fefdf8;
+    border-radius: 10px;
+    box-shadow: 6px 6px 20px 0 rgba(0,0,0,0.75);
+}
+.FAQ{
+    width: 100%;
+}
+.FAQ h2{
+    width: 100%;
+    margin-left: 10px;
+}
+.Q1, .Q2{
+    margin: 5px;
+}
+.Q1 h4, .Q2 h4{
+    transition: transform .2s;
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+.Q1 h4:hover, .Q2 h4:hover{
+    transform: scale(1.03);
+}
+.Q1 p, .Q2 p{
+    font-size: 14px;
+    padding: 5px;
 }
