Changed the layout of the Rockey_burger project file and then had to change the pathway for any external file.

--- a/css/rockey_burgers_header&footer.css
+++ b/css/rockey_burgers_header&footer.css
@@ -59,7 +59,7 @@ button{
 }
 .burgerimg {
     margin-top: 80px;
-    background-image: url("../../images/burger-hero.jpg");
+    background-image: url("../images/burger-hero.jpg");
     background-color: red;
     height: 350px;
     background-size: cover;
